[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://images/screen1.png" type="Texture" id=2]
[ext_resource path="res://materials/large_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://materials/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://images/controls.png" type="Texture" id=5]

[sub_resource type="ButtonGroup" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="screen1" type="Sprite" parent="."]
position = Vector2( 703.716, 436 )
scale = Vector2( 0.797751, 0.742513 )
texture = ExtResource( 2 )

[node name="SumoLeap" type="Label" parent="."]
anchor_right = 1.0
margin_top = -20.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "Sumo Leap"
align = 1

[node name="EasyButton" type="Button" parent="."]
margin_left = 270.0
margin_top = 180.0
margin_right = 345.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
pressed = true
group = SubResource( 1 )
text = "Easy"

[node name="MediumButton" type="Button" parent="."]
margin_left = 349.0
margin_top = 180.0
margin_right = 480.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
group = SubResource( 1 )
text = "Medium"

[node name="HardButton" type="Button" parent="."]
margin_left = 484.0
margin_top = 180.0
margin_right = 565.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
group = SubResource( 1 )
text = "Hard"

[node name="PlayButton" type="Button" parent="."]
margin_left = 594.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 355.0
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="controls" type="Sprite" parent="."]
position = Vector2( 543.001, 492 )
scale = Vector2( 0.722867, 0.819004 )
texture = ExtResource( 5 )
